# madamiru-plus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml  crowdin.yml  tasks.py
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: main.yaml
.iflow/: settings.json
.iflow/hooks/: hooks.json
1.1.3_0/: about.css  about.html  about.js  background.js  content.js  manifest.json  popup.html  popup.js  viewer.css  viewer.html  viewer.js
1.1.3_0/_locales/en/: messages.json
1.1.3_0/_locales/es/: messages.json
1.1.3_0/_locales/fr/: messages.json
1.1.3_0/_locales/zh_CN/: messages.json
1.1.3_0/_metadata/: computed_hashes.json  verified_contents.json
1.1.3_0/icons/: README.md
1.1.3_0/lib/: anime4k.js
1.1.3_0/pageContext/: ShaderManager.js  anime4k-injector copy.js  anime4k-injector-clean.js  anime4k-injector.js  shaders.js
assets/linux/: com.mtkennerly.madamiru.desktop  com.mtkennerly.madamiru.metainfo.xml
docs/: cli.md
docs/help/: application-folder.md  command-line.md  comparison-with-other-projects.md  configuration-file.md  environment-variables.md  installation.md  keyboard-controls.md  logging.md  media-sources.md  troubleshooting.md
docs/plans/: 2026-04-15-dlna-design.md  2026-04-15-dlna-implementation.md  2026-04-16-video-enhance-design.md  2026-04-16-video-enhance-implementation.md
docs/schema/: config.yaml  playlist.yaml
lang/: de-DE.ftl  en-US.ftl  fr-FR.ftl  pl-PL.ftl  pt-BR.ftl  zh-CN.ftl
src/: cli.rs  gui.rs  lang.rs  main.rs  media.rs  metadata.rs  path.rs  prelude.rs  resource.rs  testing.rs
src/cli/: parse.rs
src/dlna/: control.rs  device.rs  error.rs  mod.rs  server.rs  state.rs
src/gui/: app.rs  button.rs  common.rs  dropdown.rs  grid.rs  icon.rs  modal.rs  player.rs  shortcuts.rs  style.rs  widget.rs
src/resource/: cache.rs  config.rs  playlist.rs
src/video_enhance/: error.rs  mod.rs  params.rs  preset.rs
