[package]
name = "madamiru"
version = "0.4.1"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Dynamic multi-multimedia player"
repository = "https://github.com/mtkennerly/madamiru"
readme = "README.md"
license = "MIT"

[features]
default = ["audio", "video"]
audio = ["dep:rodio"]
video = ["dep:gstreamer", "dep:gstreamer-app", "dep:iced_video_player"]

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive", "wrap_help"] }
crab-dlna = "0.2"
clap_complete = "4.5.47"
dirs = "6.0.0"
flexi_logger = { version = "0.29.8", features = ["textfilter"], default-features = false }
fluent = "0.16.1"
globetter = "0.2.0"
globset = "0.4.16"
gstreamer = { version = "0.23.5", optional = true }
gstreamer-app = { version = "0.23.5", optional = true }
iced = { version = "0.14.0", features = ["advanced", "advanced-shaping", "crisp", "image", "lazy", "svg", "tiny-skia", "tokio", "wayland", "wgpu", "x11"], default-features = false }
iced_moving_picture = "0.2.0"
iced_video_player = { version = "0.6.0", optional = true }
image = { version = "0.25.6", features = ["ico"], default-features = false }
infer = "0.19.0"
intl-memoizer = "0.5.2"
itertools = "0.14.0"
log = "0.4.27"
mime_guess = "2.0.5"
png = "0.18.0"
opener = "0.7.2"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "gzip", "rustls-tls"], default-features = false }
rfd = { version = "0.15.3", features = ["gtk3"], default-features = false }
rodio = { version = "0.20.1", features = ["symphonia-aac", "symphonia-aiff", "symphonia-alac", "symphonia-flac", "symphonia-isomp4", "symphonia-mp3", "symphonia-vorbis", "symphonia-wav"], default-features = false, optional = true }
schemars = { version = "0.8.22", features = ["chrono"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.8.26"
tokio = { version = "1.44.1", features = ["macros", "time"] }
tree_magic_mini = "3.1.6"
typed-path = "0.10.0"
unic-langid = "0.9.5"
url = "2.5.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Console", "Win32_System_Threading"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[target.'cfg(target_os = "macos")'.build-dependencies]
system-deps = "7.0.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
test-case = "3.3.1"
velcro = "0.5.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = true

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-win64{ archive-suffix }"

[package.metadata.binstall.overrides.i686-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-win32{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-linux{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-mac{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.system-deps]
"gstreamer-1.0" = "1.14"
